# Portfolio

./: .gitignore  LICENSE  README.md
customer-clustering/: README.md  notebook.ipynb
hemnet/: README.md  hemnet_df.pkl  notebook.ipynb  wibom.ipynb
hemnet-forecast/: README.md  scrape_functions.py  solna_pred.ipynb
hungry-snail/: README.md  main.py  pyproject.toml  rewrite.py
hungry-snail/hungry_snail/: board.py  game_state.py  main.py  player.py  window.py
launch-market-analysis/: README.md  cell_phones_total.csv  reusable_lv.csv  rockets.ipynb
next-gen-check-engine/: README.md  notebook.ipynb  project.ipynb
painter-graph/: README.md  artist_soup.pkl  graph_df.pkl  notebook.ipynb
sb-beer-scrape/: README.md  df.csv  notebook.ipynb
