[tool.poetry]
name = "hungry-snail"
version = "0.1.0"
description = ""
authors = ["Iven Winkelmann <winkelmann.iven@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
